fix expert text spacing

--- a/src/app/pages/artist/artist.page.scss
+++ b/src/app/pages/artist/artist.page.scss
@@ -23,7 +23,8 @@
 
   & .artist-line-paragraph {
     & h4 {
-      margin-top: 32px
+      margin-top: 32px;
+      margin-bottom: 6px;
     }
   }
 }
